<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dirt"
    tools:context=".Activities.TraineeHome"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:text="@string/Trainee"
        android:textColor="@color/blue"
         />

    <Button
        android:id="@+id/logout"
        android:layout_below="@id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/Logout"
        android:background="@drawable/relative_border"
        android:textColor="@color/red"
         />
    <Button
        android:id="@+id/choose"
        android:layout_below="@id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/choose"
        android:textColor="@color/blue"
        android:background="@drawable/relative_border"
        />
    <TextView
        android:id="@+id/wait"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_below="@id/logout"
        android:gravity="center"
        android:text="@string/waiting"
        android:textColor="@color/blue"
        />
    <Button
        android:id="@+id/showclass"
        android:background="@drawable/relative_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/blue"
        android:layout_below="@id/logout"
        android:text="@string/showClass"
        />
    <Button
        android:id="@+id/profile"
        android:background="@drawable/relative_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@id/showclass"
        android:textColor="@color/blue"
        android:text="@string/profile"
        />
</RelativeLayout>