<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TraineeHome"
    android:background="@color/dirt"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:text="@string/instructor"
        android:textColor="@color/blue"
        />
    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/Logout"
        android:background="@drawable/relative_border"
        android:textColor="@color/red"
        />
    <Button
        android:id="@+id/Class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/blue"
        android:text="@string/request"
        android:background="@drawable/relative_border"
        />
    <Button
        android:id="@+id/CreateClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/blue"
        android:text="@string/create_work_out_program"
        android:background="@drawable/relative_border"
        />
    <Button
        android:id="@+id/personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/personal_workout"
        android:textColor="@color/blue"
        android:background="@drawable/relative_border"
        />


</LinearLayout>