<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/name"
            android:padding="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/zzz"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/part"
            android:textSize="20sp"
            android:text="@string/name"
            android:layout_below="@id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/exerName"
            android:textSize="20sp"
            android:text="@string/name"
            android:layout_below="@id/part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/set"
            android:layout_below="@id/exerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_set"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/reps"
            android:layout_below="@id/set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_reps"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/weight"
            android:layout_below="@id/reps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_weight"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="18sp" />
        <Button
            android:id="@+id/save"
            android:layout_below="@id/weight"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/save"
            />
    </RelativeLayout>

</LinearLayout>