<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/relative_border">

    <TextView
        android:id="@+id/name"
        android:padding="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/bmi"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:ems="10"
        android:hint="@string/height_in_cm"
        android:importantForAutofill="no"
        android:inputType="text|number"
         />
    <EditText
        android:id="@+id/weight"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/weight_in_kg"
        android:importantForAutofill="no"
        android:inputType="text|number"
        />
    <Button
        android:id="@+id/bmiupdate"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/up_to_date"
        />

</LinearLayout>