<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterPage"
    android:padding="16dp"
    android:gravity="center_vertical"
    android:background="@color/dirt">

    <EditText
        android:id="@+id/regName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/name"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:layout_margin="5dp"
        android:background="@drawable/relative_border"
        android:textSize="20sp"
        android:layout_below="@id/imageView2"

         />

    <EditText
        android:id="@+id/regMail"
        android:layout_below="@id/regName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:background="@drawable/relative_border"
         />

    <EditText

        android:id="@+id/regPassword"
        android:layout_below="@id/regMail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@drawable/relative_border"
        />

    <EditText
        android:id="@+id/regPassword2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/regPassword"
        android:ems="10"
        android:hint="@string/conpass"
        android:textSize="20sp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:layout_margin="5dp"
        android:background="@drawable/relative_border"
         />
    <TextView
        android:id="@+id/id2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_user_type"
        android:layout_below="@+id/regPassword2"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/blue"/>

    <Button
        android:id="@+id/regBtn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/spinner"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/register"
        android:textSize="15sp"
        android:background="@drawable/relative_border"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
         />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/reg"
        android:layout_below="@id/id2"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@drawable/spinnerback"
         />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:textSize="15sp"
        android:clickable="true"
        android:focusable="true"
        android:layout_below="@id/regBtn"
        android:text="@string/already"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/blue"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_margin="10dp"
        android:background="@mipmap/aaa"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        />


</RelativeLayout>