<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dirt"
    tools:context=".Activities.PersonalExerciseAdd">

    <TextView
        android:id="@+id/name"
        android:padding="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/add_exercise"
        android:textColor="@color/blue"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/backDate"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/back"
        android:background="@drawable/relative_border"
        />
    <Button
        android:id="@+id/copy"
        android:padding="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginTop="4dp"
        android:layout_marginRight="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/copy_exercise"
        android:background="@drawable/relative_border"
        />

    <Button
        android:id="@+id/add"
        android:padding="1dp"
        android:layout_below="@id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/copy"
        android:layout_toEndOf="@id/copy"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:text="@string/addExer"
        android:background="@drawable/relative_border"
        />
    <Button
        android:id="@+id/copy2"
        android:layout_width="200dp"
        android:padding="1dp"
        android:layout_marginRight="2dp"
        android:layout_marginEnd="2dp"
        android:layout_below="@id/copy"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/get_from_my_exercise"
        android:background="@drawable/relative_border"
        />

    <Button
        android:id="@+id/sched"
        android:padding="1dp"
        android:layout_below="@id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:layout_toRightOf="@id/copy"
        android:layout_toEndOf="@id/copy"
        android:layout_marginTop="4dp"
        android:text="@string/add_bmi_update"
        android:background="@drawable/relative_border"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@id/sched"/>

</RelativeLayout>